[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/opengameart/Ouren/Bar_Switch/bar_switch.dae" type="PackedScene" id=1]
[ext_resource path="res://entities/switch/switch.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "down"
length = 1.5
tracks/0/type = "transform"
tracks/0/path = NodePath("bar_switch001/Skeleton:Bone.001")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = true
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0.0416666, 1, 0, -7.5498e-08, 0, -0.642823, 0, 0, 0.766015, 1, 1, 1, 0.125, 1, 0, -7.5498e-08, 0, -0.609948, 0, 0, 0.792441, 1, 1, 1, 0.291667, 1, 0, -7.5498e-08, 0, -0.609948, 0, 0, 0.792441, 1, 1, 1, 0.333333, 1, 0, -7.5498e-08, 0, -0.605967, 0, 0, 0.79549, 1, 1, 1, 0.375, 1, 0, -7.5498e-08, 0, -0.594562, 0, 0, 0.80405, 1, 1, 1, 0.416667, 1, 0, -7.5498e-08, 0, -0.576115, 0, 0, 0.817369, 1, 1, 1, 0.458333, 1, 0, -7.5498e-08, 0, -0.55058, 0, 0, 0.834782, 1, 1, 1, 0.541667, 1, 0, -7.5498e-08, 0, -0.476713, 0, 0, 0.879059, 1, 1, 1, 0.666667, 1, 0, -7.5498e-08, 0, -0.300955, 0, 0, 0.953638, 1, 1, 1, 0.75, 1, 0, -7.5498e-08, 0, -0.139283, 0, 0, 0.990253, 1, 1, 1, 0.833333, 1, 0, -7.5498e-08, 0, 0.0460255, 0, 0, 0.99894, 1, 1, 1, 0.916667, 1, 0, -7.5498e-08, 0, 0.231589, 0, 0, 0.972814, 1, 1, 1, 1, 1, 0, -7.5498e-08, 0, 0.392743, 0, 0, 0.919648, 1, 1, 1, 1.08333, 1, 0, -7.5498e-08, 0, 0.514565, 0, 0, 0.857452, 1, 1, 1, 1.125, 1, 0, -7.5498e-08, 0, 0.55851, 0, 0, 0.829498, 1, 1, 1, 1.16667, 1, 0, -7.5498e-08, 0, 0.589398, 0, 0, 0.807843, 1, 1, 1, 1.20833, 1, 0, -7.5498e-08, 0, 0.602363, 0, 0, 0.798222, 1, 1, 1, 1.29167, 1, 0, -7.5498e-08, 0, 0.602363, 0, 0, 0.798222, 1, 1, 1, 1.375, 1, 0, -7.5498e-08, 0, 0.654798, 0, 0, 0.755804, 1, 1, 1, 1.58333, 1, 0, -7.5498e-08, 0, 0.654798, 0, 0, 0.755804, 1, 1, 1, 1.66667, 1, 0, -7.5498e-08, 0, 0.602363, 0, 0, 0.798222, 1, 1, 1, 1.79167, 1, 0, -7.5498e-08, 0, 0.602363, 0, 0, 0.798222, 1, 1, 1, 1.83333, 1, 0, -7.5498e-08, 0, 0.595402, 0, 0, 0.803428, 1, 1, 1, 1.875, 1, 0, -7.5498e-08, 0, 0.575864, 0, 0, 0.817545, 1, 1, 1, 1.91667, 1, 0, -7.5498e-08, 0, 0.544611, 0, 0, 0.838688, 1, 1, 1, 1.95833, 1, 0, -7.5498e-08, 0, 0.501549, 0, 0, 0.86513, 1, 1, 1, 2.04167, 1, 0, -7.5498e-08, 0, 0.377895, 0, 0, 0.925849, 1, 1, 1, 2.125, 1, 0, -7.5498e-08, 0, 0.204047, 0, 0, 0.978961, 1, 1, 1, 2.16667, 1, 0, -7.5498e-08, 0, 0.102147, 0, 0, 0.994769, 1, 1, 1, 2.20833, 1, 0, -7.5498e-08, 0, -0.00476858, 0, 0, 0.999989, 1, 1, 1, 2.25, 1, 0, -7.5498e-08, 0, -0.11163, 0, 0, 0.99375, 1, 1, 1, 2.29167, 1, 0, -7.5498e-08, 0, -0.213374, 0, 0, 0.976971, 1, 1, 1, 2.375, 1, 0, -7.5498e-08, 0, -0.386707, 0, 0, 0.922203, 1, 1, 1, 2.45833, 1, 0, -7.5498e-08, 0, -0.509776, 0, 0, 0.860307, 1, 1, 1, 2.5, 1, 0, -7.5498e-08, 0, -0.552585, 0, 0, 0.833456, 1, 1, 1, 2.54167, 1, 0, -7.5498e-08, 0, -0.583635, 0, 0, 0.812016, 1, 1, 1, 2.58333, 1, 0, -7.5498e-08, 0, -0.603037, 0, 0, 0.797713, 1, 1, 1, 2.625, 1, 0, -7.5498e-08, 0, -0.609948, 0, 0, 0.792441, 1, 1, 1, 2.75, 1, 0, -7.5498e-08, 0, -0.609948, 0, 0, 0.792441, 1, 1, 1, 2.79167, 1, 0, -7.5498e-08, 0, -0.61799, 0, 0, 0.786186, 1, 1, 1, 2.83333, 1, 0, -7.5498e-08, 0, -0.634985, 0, 0, 0.772524, 1, 1, 1, 2.875, 1, 0, -7.5498e-08, 0, -0.642823, 0, 0, 0.766015, 1, 1, 1, 4.04167, 1, 0, -7.5498e-08, 0, -0.642823, 0, 0, 0.766015, 1, 1, 1 )
tracks/1/type = "transform"
tracks/1/path = NodePath("bar_switch001/Skeleton:Bone.003")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = true
tracks/1/enabled = true
tracks/1/keys = PoolRealArray( 0.0416666, 1, 1.43051e-06, -1.45104e-09, -9.53674e-07, -2.67821e-11, 1.63913e-07, -6.20303e-12, 1, 1, 1, 1, 3, 1, 1.43051e-06, -1.45104e-09, -9.53674e-07, -2.67821e-11, 1.63913e-07, -6.20303e-12, 1, 1, 1, 1, 3.04167, 1, 1.43051e-06, -1.45104e-09, -9.53674e-07, -2.67405e-11, -0.00488221, -8.32676e-12, 0.999988, 1, 1, 1, 3.08333, 1, 1.43051e-06, -1.45104e-09, -9.53674e-07, -2.64906e-11, -0.0190594, -1.45301e-11, 0.999818, 1, 1, 1, 3.125, 1, 1.43051e-06, -1.45104e-09, -9.53674e-07, -2.56847e-11, -0.0418762, -2.45006e-11, 0.999123, 1, 1, 1, 3.16667, 1, 1.43051e-06, -1.45104e-09, -9.53674e-07, -2.38124e-11, -0.0727244, -3.78066e-11, 0.997352, 1, 1, 1, 3.25, 1, 1.43051e-06, -1.45104e-09, -9.53674e-07, -1.43337e-11, -0.156109, -7.25057e-11, 0.98774, 1, 1, 1, 3.375, 1, 1.43051e-06, -1.45104e-09, -9.53674e-07, 2.27677e-11, -0.325184, -1.31152e-10, 0.945651, 1, 1, 1, 3.45833, 1, 1.43051e-06, -1.45104e-09, -9.53674e-07, 6.44593e-11, -0.457703, -1.59212e-10, 0.889105, 1, 1, 1, 3.54167, 1, 1.43051e-06, -1.45104e-09, -9.53674e-07, 1.12862e-10, -0.59788, -1.64086e-10, 0.801586, 1, 1, 1, 3.58333, 1, 1.43051e-06, -1.45104e-09, -9.53674e-07, 1.3524e-10, -0.668977, -1.54464e-10, 0.743283, 1, 1, 1, 3.625, 1, 1.43051e-06, -1.45104e-09, -9.53674e-07, 1.52844e-10, -0.74003, -1.35463e-10, 0.672574, 1, 1, 1, 3.66667, 1, 1.43051e-06, -1.45104e-09, -9.53674e-07, 1.61677e-10, -0.810588, -1.06427e-10, 0.585617, 1, 1, 1, 3.70833, 1, 1.43051e-06, -1.45104e-09, -9.53674e-07, -1.37629e-08, 0.879818, 1.14494e-10, -0.47531, 1, 1, 1, 3.75, 1, 1.43051e-06, -1.45104e-09, -9.53674e-07, -1.40014e-08, 0.978241, 4.05492e-11, -0.207471, 1, 1, 1, 3.79167, 1, 1.43051e-06, -1.45104e-09, -9.53674e-07, -1.54631e-08, 0.99997, 2.68559e-11, -0.00779533, 1, 1, 1, 4.04167, 1, 1.43051e-06, -1.45104e-09, -9.53674e-07, -1.54631e-08, 0.99997, 2.68559e-11, -0.00779533, 1, 1, 1 )
tracks/2/type = "value"
tracks/2/path = NodePath("bar_switch001/Skeleton/bar_switch:mesh:surface_2/material:albedo_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.996078, 0.996078, 1 ), Color( 1, 0.960784, 0, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.15
tracks/0/type = "transform"
tracks/0/path = NodePath("bar_switch001/Skeleton:Bone.001")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = true
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0.0416666, 1, 0, -7.5498e-08, 0, -0.642823, 0, 0, 0.766015, 1, 1, 1, 0.125, 1, 0, -7.5498e-08, 0, -0.609948, 0, 0, 0.792441, 1, 1, 1, 0.291667, 1, 0, -7.5498e-08, 0, -0.609948, 0, 0, 0.792441, 1, 1, 1, 0.333333, 1, 0, -7.5498e-08, 0, -0.605967, 0, 0, 0.79549, 1, 1, 1, 0.375, 1, 0, -7.5498e-08, 0, -0.594562, 0, 0, 0.80405, 1, 1, 1, 0.416667, 1, 0, -7.5498e-08, 0, -0.576115, 0, 0, 0.817369, 1, 1, 1, 0.458333, 1, 0, -7.5498e-08, 0, -0.55058, 0, 0, 0.834782, 1, 1, 1, 0.541667, 1, 0, -7.5498e-08, 0, -0.476713, 0, 0, 0.879059, 1, 1, 1, 0.666667, 1, 0, -7.5498e-08, 0, -0.300955, 0, 0, 0.953638, 1, 1, 1, 0.75, 1, 0, -7.5498e-08, 0, -0.139283, 0, 0, 0.990253, 1, 1, 1, 0.833333, 1, 0, -7.5498e-08, 0, 0.0460255, 0, 0, 0.99894, 1, 1, 1, 0.916667, 1, 0, -7.5498e-08, 0, 0.231589, 0, 0, 0.972814, 1, 1, 1, 1, 1, 0, -7.5498e-08, 0, 0.392743, 0, 0, 0.919648, 1, 1, 1, 1.08333, 1, 0, -7.5498e-08, 0, 0.514565, 0, 0, 0.857452, 1, 1, 1, 1.125, 1, 0, -7.5498e-08, 0, 0.55851, 0, 0, 0.829498, 1, 1, 1, 1.16667, 1, 0, -7.5498e-08, 0, 0.589398, 0, 0, 0.807843, 1, 1, 1, 1.20833, 1, 0, -7.5498e-08, 0, 0.602363, 0, 0, 0.798222, 1, 1, 1, 1.29167, 1, 0, -7.5498e-08, 0, 0.602363, 0, 0, 0.798222, 1, 1, 1, 1.375, 1, 0, -7.5498e-08, 0, 0.654798, 0, 0, 0.755804, 1, 1, 1, 1.58333, 1, 0, -7.5498e-08, 0, 0.654798, 0, 0, 0.755804, 1, 1, 1, 1.66667, 1, 0, -7.5498e-08, 0, 0.602363, 0, 0, 0.798222, 1, 1, 1, 1.79167, 1, 0, -7.5498e-08, 0, 0.602363, 0, 0, 0.798222, 1, 1, 1, 1.83333, 1, 0, -7.5498e-08, 0, 0.595402, 0, 0, 0.803428, 1, 1, 1, 1.875, 1, 0, -7.5498e-08, 0, 0.575864, 0, 0, 0.817545, 1, 1, 1, 1.91667, 1, 0, -7.5498e-08, 0, 0.544611, 0, 0, 0.838688, 1, 1, 1, 1.95833, 1, 0, -7.5498e-08, 0, 0.501549, 0, 0, 0.86513, 1, 1, 1, 2.04167, 1, 0, -7.5498e-08, 0, 0.377895, 0, 0, 0.925849, 1, 1, 1, 2.125, 1, 0, -7.5498e-08, 0, 0.204047, 0, 0, 0.978961, 1, 1, 1, 2.16667, 1, 0, -7.5498e-08, 0, 0.102147, 0, 0, 0.994769, 1, 1, 1, 2.20833, 1, 0, -7.5498e-08, 0, -0.00476858, 0, 0, 0.999989, 1, 1, 1, 2.25, 1, 0, -7.5498e-08, 0, -0.11163, 0, 0, 0.99375, 1, 1, 1, 2.29167, 1, 0, -7.5498e-08, 0, -0.213374, 0, 0, 0.976971, 1, 1, 1, 2.375, 1, 0, -7.5498e-08, 0, -0.386707, 0, 0, 0.922203, 1, 1, 1, 2.45833, 1, 0, -7.5498e-08, 0, -0.509776, 0, 0, 0.860307, 1, 1, 1, 2.5, 1, 0, -7.5498e-08, 0, -0.552585, 0, 0, 0.833456, 1, 1, 1, 2.54167, 1, 0, -7.5498e-08, 0, -0.583635, 0, 0, 0.812016, 1, 1, 1, 2.58333, 1, 0, -7.5498e-08, 0, -0.603037, 0, 0, 0.797713, 1, 1, 1, 2.625, 1, 0, -7.5498e-08, 0, -0.609948, 0, 0, 0.792441, 1, 1, 1, 2.75, 1, 0, -7.5498e-08, 0, -0.609948, 0, 0, 0.792441, 1, 1, 1, 2.79167, 1, 0, -7.5498e-08, 0, -0.61799, 0, 0, 0.786186, 1, 1, 1, 2.83333, 1, 0, -7.5498e-08, 0, -0.634985, 0, 0, 0.772524, 1, 1, 1, 2.875, 1, 0, -7.5498e-08, 0, -0.642823, 0, 0, 0.766015, 1, 1, 1, 4.04167, 1, 0, -7.5498e-08, 0, -0.642823, 0, 0, 0.766015, 1, 1, 1 )
tracks/1/type = "transform"
tracks/1/path = NodePath("bar_switch001/Skeleton:Bone.003")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = true
tracks/1/enabled = true
tracks/1/keys = PoolRealArray( 0.0416666, 1, 1.43051e-06, -1.45104e-09, -9.53674e-07, -2.67821e-11, 1.63913e-07, -6.20303e-12, 1, 1, 1, 1, 3, 1, 1.43051e-06, -1.45104e-09, -9.53674e-07, -2.67821e-11, 1.63913e-07, -6.20303e-12, 1, 1, 1, 1, 3.04167, 1, 1.43051e-06, -1.45104e-09, -9.53674e-07, -2.67405e-11, -0.00488221, -8.32676e-12, 0.999988, 1, 1, 1, 3.08333, 1, 1.43051e-06, -1.45104e-09, -9.53674e-07, -2.64906e-11, -0.0190594, -1.45301e-11, 0.999818, 1, 1, 1, 3.125, 1, 1.43051e-06, -1.45104e-09, -9.53674e-07, -2.56847e-11, -0.0418762, -2.45006e-11, 0.999123, 1, 1, 1, 3.16667, 1, 1.43051e-06, -1.45104e-09, -9.53674e-07, -2.38124e-11, -0.0727244, -3.78066e-11, 0.997352, 1, 1, 1, 3.25, 1, 1.43051e-06, -1.45104e-09, -9.53674e-07, -1.43337e-11, -0.156109, -7.25057e-11, 0.98774, 1, 1, 1, 3.375, 1, 1.43051e-06, -1.45104e-09, -9.53674e-07, 2.27677e-11, -0.325184, -1.31152e-10, 0.945651, 1, 1, 1, 3.45833, 1, 1.43051e-06, -1.45104e-09, -9.53674e-07, 6.44593e-11, -0.457703, -1.59212e-10, 0.889105, 1, 1, 1, 3.54167, 1, 1.43051e-06, -1.45104e-09, -9.53674e-07, 1.12862e-10, -0.59788, -1.64086e-10, 0.801586, 1, 1, 1, 3.58333, 1, 1.43051e-06, -1.45104e-09, -9.53674e-07, 1.3524e-10, -0.668977, -1.54464e-10, 0.743283, 1, 1, 1, 3.625, 1, 1.43051e-06, -1.45104e-09, -9.53674e-07, 1.52844e-10, -0.74003, -1.35463e-10, 0.672574, 1, 1, 1, 3.66667, 1, 1.43051e-06, -1.45104e-09, -9.53674e-07, 1.61677e-10, -0.810588, -1.06427e-10, 0.585617, 1, 1, 1, 3.70833, 1, 1.43051e-06, -1.45104e-09, -9.53674e-07, -1.37629e-08, 0.879818, 1.14494e-10, -0.47531, 1, 1, 1, 3.75, 1, 1.43051e-06, -1.45104e-09, -9.53674e-07, -1.40014e-08, 0.978241, 4.05492e-11, -0.207471, 1, 1, 1, 3.79167, 1, 1.43051e-06, -1.45104e-09, -9.53674e-07, -1.54631e-08, 0.99997, 2.68559e-11, -0.00779533, 1, 1, 1, 4.04167, 1, 1.43051e-06, -1.45104e-09, -9.53674e-07, -1.54631e-08, 0.99997, 2.68559e-11, -0.00779533, 1, 1, 1 )
tracks/2/type = "value"
tracks/2/path = NodePath("bar_switch001/Skeleton/bar_switch:mesh:surface_2/material:albedo_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.996078, 0.996078, 1 ), Color( 1, 0.960784, 0, 1 ) ]
}

[sub_resource type="BoxShape" id=2]
extents = Vector3( 2.78925, 2.64649, 2.75121 )

[node name="Switch" type="Area"]
script = ExtResource( 2 )

[node name="bar_switch" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )

[node name="bar_switch" parent="bar_switch/bar_switch001/Skeleton" index="0"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )

[node name="AnimationPlayer" parent="bar_switch" index="1"]
anims/down = SubResource( 1 )
anims/idle = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.76012 )
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Switch_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Switch_body_exited"]
[connection signal="animation_finished" from="bar_switch/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="bar_switch"]
